--- a/docsite/fillform/templates/fillform/index.html
+++ b/docsite/fillform/templates/fillform/index.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title></title>
-    </head>
-    <body>
+{% extends "home/basic.html"  %}
+{% block content %}
 
-    </body>
-</html>
+<form class="form-inline" method="POST" action="{% url 'submit'  %}" role="form">
+{% csrf_token %}
+<div class="panel-group">
+  <div class="panel panel-default">
+    <div class="panel-body">Please enter the symptom and corresponding severity{{form.symptoms1}}{{form.severety1}}</div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-body">Please enter the symptom and corresponding severity{{form.symptoms2}}{{form.severety2}}</div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-body">Please enter the symptom and corresponding severity{{form.symptoms3}}{{form.severety3}}</div>
+  </div>
+</div>
+  <button class="btn btn-primary" type="submit">Submit</a>
+</form>
+{% endblock %}
