--- a/docsite/fillform/templates/fillform/index.html
+++ b/docsite/fillform/templates/fillform/index.html
@@ -14,6 +14,6 @@
     <div class="panel-body">Please enter the symptom and corresponding severity{{form.symptoms3}}{{form.severety3}}</div>
   </div>
 </div>
-  <button class="btn btn-primary" type="submit">Submit</a>
+  <button class="btn btn-primary" type="submit">Submit</button>
 </form>
 {% endblock %}
