--- a/docsite/home/templates/home/home.html
+++ b/docsite/home/templates/home/home.html
@@ -1,5 +1,5 @@
 {% extends "home/basic.html"  %}
 {% block content %}
-<h1 class="top" style="font-family: 'Permanent Marker', cursive;">MEDICA</h1>
+<h1 class="top" style="font-family: 'Permanent Marker', cursive;">KnowMedy</h1>
 <p class="intro" style="    font-family: 'Nanum Gothic Coding', monospace;">Hello there! Feel a bit nauseous? No worries! We are there for you, with our closer than ever estimates and better than effective solutions and all that you need to know.</p>
 {% endblock %}
